<resources>
    <string name="app_name">烤批</string>
    <string name="navigation_draw_subtitle_1">信息查看</string>
    <string name="navigation_draw_func_1">卡牌</string>
    <string name="navigation_draw_func_2">乐曲</string>
    <string name="navigation_draw_func_3">活动</string>
    <string name="navigation_draw_header_title">Haruki妙妙屋</string>

    <string name="navigation_other_subtitle">其他</string>
    <string name="navigation_other_about">关于</string>
    <string name="card_tab_all">全员</string>
    <string name="card_tab_virtual_singer">V家</string>
    <string name="card_tab_leo_need">L/N</string>
    <string name="card_tab_more_more_jump">MMJ</string>
    <string name="card_tab_vivid_bad_squad">VBS</string>
    <string name="card_tab_wonderland_showtime">WS</string>
    <string name="card_tab_25_night_cord">25时</string>
    <string name="btn_filter">筛选</string>"
    <string name="search_hint">搜索</string>
    <string name="skill_point_bonus_card">分卡</string>
    <string name="skill_check_bonus_card">判卡</string>
    <string name="skill_hp_bonus_card">奶卡</string>
    <string name="skill_point_bonus_when_perfect_card">p分卡</string>
    <string name="skill_point_bonus_when_high_hp_card">血分卡</string>
    <string name="skill_point_bonus_when_band">团分卡</string>"
    <string name="filter_subtitle_band">组合</string>
    <string name="filter_subtitle_character">角色</string>
    <string name="filter_subtitle_attribute">属性</string>
    <string name="filter_subtitle_skill">技能</string>
    <string name="filter_subtitle_rarity">稀有度</string>
    <string name="filter_subtitle_sort">排序</string>
    <string name="filter_subtitle_asc">升序</string>
    <string name="filter_subtitle_desc">降序</string>
    <string name="filter_subtitle_sort_by">排序属性</string>
    <string name="filter_subtitle_release_time">开放时间</string>
    <string name="filter_subtitle_id">编号</string>
    <string name="filter_subtitle_power">综合力</string>

    <string name="filter_reset">重置</string>
    <string name="filter_select_none">清空</string>
    <string name="filter_confirm">确认</string>

    <string name="start_loading_original_Image">开始加载原图</string>
    <string name="load_success">加载完成</string>
    <string name="load_failed">加载失败</string>

    <string name="attr_pure">属性： 纯真</string>
    <string name="attr_cute">属性： 可爱</string>
    <string name="attr_mysterious">属性： 神秘</string>
    <string name="attr_cool">属性： 帅气</string>
    <string name="attr_happy">属性： 快乐</string>

    <string name="card_supply_type_normal">普通</string>
    <string name="card_supply_type_birthday">生日限定</string>
    <string name="card_supply_type_term_limited">期间限定</string>
    <string name="card_supply_type_c_fes">cfes限定</string>
    <string name="card_supply_type_b_fes">bfes限定</string>
    <string name="card_supply_type_unit_limited">WL限定</string>
    <string name="card_supply_type_collaboration_limited">联动限定</string>
</resources>